Revert "fixed spacing issues througout the pages"
This reverts commit 6c0e779e6cbce098c03a338c705e901ee54d3a56.

--- a/css/main.css
+++ b/css/main.css
@@ -191,109 +191,3 @@ footer {
 .margin-left {
     margin-left: 10px;
 }
-
-#existing{
-  margin-left: -23%;
-}
-
-#new{
-  margin-left: -23%;
-}
-
-.spacing {
-  margin: 0 -220px 0 -220px;
-
-}
-
-#s21{
-  margin-right: -285px;
-
-}
-.login_label{
-
-padding-right: 1px;
-height: 10px;
-width: 150px;
-/*margin-top: 1%;*/
-}
-
-.login_input{
-  margin-bottom: 5px;
-  height: 25px;
-  /*width: 150px;*/
-
-    width: 190px;
-}
-
-#input1{
-  height: 35px;
-    width: 150px;
-}
-
-#s1{
-  margin-left: -50px;
-  margin-right: 15px;
-}
-
-#s3{
-  margin-left: -85px;
-  margin-right: 15px;
-}
-
-#s5{
-  margin-left: -135px;
-  margin-right: 15px;
-}
-
-#s7{
-  margin-left: -50px;
-  margin-right: 10px;
-}
-
-#s9{
-  margin-left: -115px;
-  margin-right: 12px;
-}
-
-#s11{
-  margin-left: 7px;
-  margin-right: 0px;
-}
-
-#s13{
-  margin-left: 7px;
-  margin-right: 50px;
-}
-
-#s15{
-  margin-left: 5px;
-  margin-right: 35px;
-
-}
-
-#s17{
-  margin-left: 5px;
-  margin-right: 35px;
-
-}
-
-#s19{
-  margin-left: 5px;
-  margin-right: 120px;
-}
-
-#s20{
-  height: 35px;
-    width: 150px;
-
-}
-
-.servclass{
-  margin-right: -500px;
-  margin: 0 -220px 0 -220px;
-
-}
-
-#s23{
-  padding-right: 5px;
-}
